--- a/css/styles.css
+++ b/css/styles.css
@@ -113,28 +113,55 @@ align-items: center;
   color: #404bbf;
 }
                                   /*hero*/ 
+ .container-hero{
+ 
+
+ }
+ 
 .hero {
   background-color: #2e2f42;
+ padding: 188px 0; 
 }
+  
+   
 
-.hero-title {
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #ffffff;
-}
+ .hero-title {
+   font-size: 56px;
+   line-height: 1.07;
+   letter-spacing: 0.02em;
+   text-align: center;
+   color: #ffffff;
+   max-width:496px; 
+   max-height: 120px;  
+   margin-left: auto;
+   margin-right: auto;
+   padding-bottom: 48px;
+   display:flex;
+   align-items:center;
+  }
+
 
 .hero-button {
   background-color: #4D5AE5;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-  cursor: pointer;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    display: block;
+    border-radius: 4px;
+    border: 0;
+    padding: 16px 32px;
+    margin-left: auto;
+      margin-right: auto;
+ 
+ 
 }
+
+   
 
 .hero-button:hover,
 .hero-button:focus {
@@ -147,6 +174,16 @@ align-items: center;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+.features-title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
 }
 
 .features-text {
@@ -226,5 +263,3 @@ align-items: center;
   color: #F4F4FD;
   letter-spacing: 0.02em;
 }
-
-
