--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,23 @@ body {
   font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #FFFFFF;
+  margin: 0;
 }
 
- 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
 
 ul {
+  display: block;
   list-style-type: none;
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 a {
@@ -18,36 +27,37 @@ a {
 
 p {
   font-weight: 400;
-}
-
-                      /* загальні стилі*/
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
   margin: 0;
 }
-.container{
-  max-width: 1158px;
-  padding:0 15px; 
-  margin:0 auto;
 
-}                                  /*header*/
+img {
+  display: block;
+}
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .header {
   background-color: #fff;
-  border-bottom: 1px solid #e7e9fc
+
 }
-.heder-container{
-display:flex;
-align-items: center;
-}
-.header-navigation{
-  display:flex;
+
+.header-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
 }
+
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -56,151 +66,163 @@ align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  padding: 24px 0px;
-  margin-right: 76px ;
+
+  display: inline-block;
+  padding: 24px 0;
+  margin-right: 76px;
 }
+
 .header-logo .header-logo-span {
   color: #2e2f42;
 }
-                                    /*navigate address*/
-.nav-item .nav-link { display: block;
+
+.navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 332px;
+  flex-grow: 1;
+}
+
+.nav-list {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 40px;
+
+}
+
+
+.nav-item>.nav-link {
+  display: block;
   padding: 24px 0;
+
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  
 }
-.nav-list{
-  display: flex;
-  align-items:center;
-  gap:40px ;
-  }
- 
- 
+
 .nav-item>.nav-link:hover,
 .nav-link:focus {
   color: #404bbf;
-  
 }
-
- 
 
 .address {
   font-style: normal;
-  margin-left: auto;
-  
+}
+
+.address-list {
+  display: flex;
+  gap: 40px;
 }
 
 .address-link {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  
-  display: block;
-    padding: 24px 0;
-  
-  
-}
-.address-list{
-  align-items: center;
-    display: flex;
-    gap: 40px;
 }
 
 .address-link:hover,
 .address-link:focus {
   color: #404bbf;
 }
-                                  /*hero*/ 
- .container-hero{
- 
 
- }
- 
- 
 .hero {
   background-color: #2e2f42;
- padding: 188px 0; 
+  padding: 188px 0;
 }
-  
-   
 
- .hero-title {
-   font-size: 56px;
-   line-height: 1.07;
-   letter-spacing: 0.02em;
-   text-align: center;
-   color: #ffffff;
-   max-width:496px; 
-   max-height: 120px;  
-   margin-left: auto;
-   margin-right: auto;
-   padding-bottom: 48px;
-   display:flex;
-   align-items:center;
-  }
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
+}
 
-.hero-button
-{background-color: #4D5AE5;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    display: block;
-    border-radius: 4px;
-    border: 0;
-    padding: 16px 32px;
-    margin-left: auto;
-    margin-right: auto;
-    min-width: 169px
- }   
+.hero-title {
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #ffffff;
+
+  display: block;
+  max-width: 496px;
+  margin-bottom: 48px;
+
+}
+
+.hero-button {
+  background-color: #4D5AE5;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+
+  display: block;
+  border-radius: 4px;
+  border: 0;
+  padding: 16px 32px;
+  min-width: 169px;
+  /* margin: 0 249px; */
+
+}
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: #404bbf;
 }
-                                    /*features*/
- .features-container {
-   display: flex;
-  width:1128px;
-  margin: auto;
-  padding: 120px 0;
-   
-   
-   
-  
 
- }
- .features{
-  display: block;
- 
+.features {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 
-  
- }
+.features-container {
+  display: flex;
+  width: 1128px;
+
+}
+
+.features-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.features-title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.features-item {
+  width: calc((100% - 72px) / 4);
+}
+
 .features-subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+
   margin-bottom: 8px;
-  
-}
-.features-title {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
 }
 
 .features-text {
@@ -208,18 +230,15 @@ align-items: center;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+
+  width: 264px;
 }
-.features-item{
-  display: flex;
- width: calc(100%-72px)/4;
- margin: auto;
- gap: 24px;
-  
-      
-}
-                                  /*team*/
+
 .team {
   background-color: #F4F4FD;
+
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .team-title {
@@ -229,20 +248,53 @@ align-items: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
+
+  /* width: 162px;    */
+  margin-bottom: 72px;
+}
+
+.team-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
 }
 
 .team-card {
   background-color: #FFFFFF;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
+
+  width: calc((100% - 72px) / 4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* gap: 32px; */
+}
+
+.team-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* gap: 8px; */
+
+  padding-top: 32px;
+  padding-bottom: 32px;
+
 }
 
 .team-subtitle {
+
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  
+
+  margin-bottom: 8px
 }
 
 .team-text {
@@ -252,7 +304,32 @@ align-items: center;
   text-align: center;
   color: #434455;
 }
-                                  /*portfolio*/
+
+.portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  row-gap: 48px;
+  column-gap: 24px;
+}
+
+.portfolio-item {
+  width: calc((100% - 24px * 2) / 3);
+
+}
+
+.app-content-container {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
 .portfolio-title {
   font-size: 36px;
   line-height: 1.11;
@@ -260,24 +337,48 @@ align-items: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
-}                              
 
-.project-subtitle {
+  margin-bottom: 72px;
+}
+
+
+.thumb {
+  display: block;
+  object-fit: cover;
+}
+
+.portfolio-item-subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
-.project-text {
+.portfolio-item-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+
+  display: block;
 }
-                                  /*footer*/
+
 .footer {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.footer-container {
+  margin-left: 156px;
+}
+
+.footer-logo {
+  display: inline-block;
+  padding: 0;
+  margin-right: 0;
+  margin-bottom: 16px;
 }
 
 .footer-logo-span {
@@ -285,6 +386,7 @@ align-items: center;
 }
 
 .footer-text {
+  width: 264px;
   line-height: 1.5;
   color: #F4F4FD;
   letter-spacing: 0.02em;
