--- a/css/styles.css
+++ b/css/styles.css
@@ -370,9 +370,7 @@ img {
   padding-bottom: 100px;
 }
 
-.footer-container {
-  margin-left: 156px;
-}
+.footer-container {}
 
 .footer-logo {
   display: inline-block;
